single user/store fetch and delete
